[metadata]
name = kaitaiStructCompile.backend.CLI
author = KOLANICH
url = https://gitlab.com/kaitaiStructCompile.py/kaitaiStructCompile.backend.CLI.git
description = CLI backend for Kaitai Struct compiler
long_description = file: ReadMe.md
long_description_content_type = text/markdown
keywords = KaitaiStruct, compiler, backend, binary format, setuptools, automation
license = Unlicense
license_file = UNLICENSE
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent

[options]
python_requires = >=3.4
zip_safe = True
include_package_data = True
py_modules = kaitaiStructCompile.backend.cmdline
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
#namespace_packages = kaitaiStructCompile.backend
install_requires =
	setuptools

[options.entry_points]
kaitai_struct_compile =
	CLI = kaitaiStructCompile.backend.cmdline:init
